<resources>
    <string name="app_name">Task Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_password">Password</string>
    <string name="button_enter">Sign in</string>
    <string name="lbl_menu_editar">Update</string>
    <string name="lbl_menu_excluir">Delete</string>
    <string name="lbl_taskName">Task Name</string>
    <string name="lbl_taskDescription">Task Description</string>
    <string name="lbl_menu_add">Task Add</string>
    <string name="msg_welcome">Welcome %s!</string>
    <string name="msg_required">Field Required</string>
    <string name="msg_save_sucessfull">Save Sucessfull!</string>
    <string name="button_saveTask">Save</string>
    <string name="msg_delete_sucessfull">Register deleted sucessfull</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="msg_confirm_delete">Want to delete this register?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_label_name">Name</string>
    <string name="lbl_label_description">Description</string>
    <string name="menu_label_add">Label Add</string>
    <string name="lbl_label_add">Label Add</string>
    <string name="lbl_titleColor">Colors</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="button_signup">Sign Up</string>
    <string name="lbl_loginCadastro">Login</string>
    <string name="lbl_passwordCadastro">Password</string>
    <string name="button_register">Register</string>
    <string name="msg_user_pass_incorrect">Login or password incorrect</string>
    <string name="button_newLabel">New Label</string>
    <string name="lbl_zipcode">Zip Code</string>
    <string name="button_search">Search</string>
    <string name="lbl_type">Street type</string>
    <string name="lbl_street">Street</string>
    <string name="lbl_neighborhood">Neighborhood</string>
    <string name="lbl_city">City</string>
    <string name="lbl_state">State</string>
    <string name="lbl_webid">Web ID</string>
    <string name="lbl_update">Update</string>


</resources>
