<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_loginCadastro"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_passwordCadastro"
        android:password="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editTextZipCode"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_zipcode"/>

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search"/>

    </LinearLayout>

    <EditText
        android:id="@+id/editTextType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_type"/>

    <EditText
        android:id="@+id/editTextStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_street"/>

    <EditText
        android:id="@+id/editTextNeighborhood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_neighborhood"/>

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_city"/>

    <EditText
        android:id="@+id/editTextState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_state"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register"/>
</LinearLayout>